tests/pass/array_push_basic.lum
nums = [1, 2]
__push(nums, 3)
__emit(nums, true, false)
