tests/fail/array_index_out_of_bounds.lum
nums = [1, 2]
__emit(nums[2], true, false)
